added comments to the js file and divs to the html file

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <script src="game.js" defer></script>
   </head>
   <body>
-    <button id="btn-rock">Rock</button>
-    <button id="btn-paper">Paper</button>
-    <button id="btn-scissors">Scissors</button>
+    <div class="score">
+      <div id="playerScore">Player Score</div>
+      <div id="playerScore">Computer Score</div>
+    </div>
+    <div id="options">
+      <button id="btn-rock">Rock</button>
+      <button id="btn-paper">Paper</button>
+      <button id="btn-scissors">Scissors</button>
+    </div>
     <div id="result">Result:</div>
   </body>
 </html>
