now the results are displayed with "*"

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
   </head>
   <body>
     <div class="score">
-      <div id="playerScore">Player Score</div>
-      <div id="playerScore">Computer Score</div>
+      <div id="player">
+        <p>Player Score</p>
+        <div id="playerPoints"></div>
+      </div>
+
+      <div id="tie">
+        <p>Tie</p>
+        <div id="tiePoints"></div>
+      </div>
+
+      <div id="computer">
+        <p>Computer Score</p>
+        <div id="computerPoints"></div>
+      </div>
     </div>
     <div id="options">
       <button id="btn-rock">Rock</button>
