--- a/index.html
+++ b/index.html
@@ -8,15 +8,31 @@
     <script src="game.js" defer></script>
   </head>
   <body>
+    <button id="btn-reset">Reset</button>
+
+    <div id="attempts">
+      Win when reach
+      <button id="btn-1">1</button>
+      <button id="btn-3">3</button>
+      <button id="btn-5">5</button>
+      <button id="btn-7">7</button>
+    </div>
+
+    <div id="options">
+      <button id="btn-rock">Rock</button>
+      <button id="btn-paper">Paper</button>
+      <button id="btn-scissors">Scissors</button>
+    </div>
+
+    <div id="tie">
+      <p>Tie</p>
+      <div id="tiePoints"></div>
+    </div>
+
     <div class="score">
       <div id="player">
         <p>Player Score</p>
         <div id="playerPoints"></div>
-      </div>
-
-      <div id="tie">
-        <p>Tie</p>
-        <div id="tiePoints"></div>
       </div>
 
       <div id="computer">
@@ -24,11 +40,5 @@
         <div id="computerPoints"></div>
       </div>
     </div>
-    <div id="options">
-      <button id="btn-rock">Rock</button>
-      <button id="btn-paper">Paper</button>
-      <button id="btn-scissors">Scissors</button>
-    </div>
-    <div id="result">Result:</div>
   </body>
 </html>
