--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
     <script src="game.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <button id="btn-reset">Reset</button>
@@ -16,12 +17,6 @@
       <button id="btn-3">3</button>
       <button id="btn-5">5</button>
       <button id="btn-7">7</button>
-    </div>
-
-    <div id="options">
-      <button id="btn-rock">Rock</button>
-      <button id="btn-paper">Paper</button>
-      <button id="btn-scissors">Scissors</button>
     </div>
 
     <div id="tie">
@@ -39,6 +34,12 @@
         <p>Computer Score</p>
         <div id="computerPoints"></div>
       </div>
+    </div>
+
+    <div id="options">
+      <button id="btn-rock">Rock</button>
+      <button id="btn-paper">Paper</button>
+      <button id="btn-scissors">Scissors</button>
     </div>
   </body>
 </html>
