reset function now restore the reach option numbers

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button id="btn-reset">Reset</button>
 
     <div id="attempts">
-      Win when reach
+      <p>Win when reach</p>
       <button id="btn-1" class="btn-numbers">1</button>
       <button id="btn-3" class="btn-numbers">3</button>
       <button id="btn-5" class="btn-numbers">5</button>
