I stayed doing the box that contains the points of the players

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <button id="btn-7" class="btn-numbers">7</button>
     </div>
 
-    <div class="score">
+    <div id="score">
       <div id="player">
-        <p>Player Score</p>
-        <div id="playerPoints"></div>
+        <p>Player-Score</p>
+        <div id="playerPoints" class="score-box"></div>
       </div>
 
       <div id="tie">
@@ -37,8 +37,8 @@
       </div>
 
       <div id="computer">
-        <p>Computer Score</p>
-        <div id="computerPoints"></div>
+        <p>Computer-Score</p>
+        <div id="computerPoints" class="score-box"></div>
       </div>
     </div>
 
