added function to create empty circle

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
     <div id="score">
       <div id="player">
         <p>Player-Score</p>
-        <div id="playerPoints" class="score-box">
-          <img
-            class="empty-circle"
-            src="/resources/circle-svgrepo-com.svg"
-            alt="1 empty point"
-          />
-        </div>
+        <div id="playerPoints" class="score-box"></div>
       </div>
 
       <div id="tie">
@@ -44,13 +38,7 @@
 
       <div id="computer">
         <p>Computer-Score</p>
-        <div id="computerPoints" class="score-box">
-          <img
-            class="empty-circle"
-            src="/resources/circle-svgrepo-com.svg"
-            alt="1 empty point"
-          />
-        </div>
+        <div id="computerPoints" class="score-box"></div>
       </div>
     </div>
 
