--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Rock Paper Scissors</title>
     <script src="game.js" defer></script>
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Ubuntu font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,700;1,100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap"
       rel="stylesheet"
     />
   </head>
