reset now delete the crown if it exists

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button id="btn-reset">Reset</button>
 
     <div id="attempts">
-      <p>Win when reach</p>
+      <div>Win when reach</div>
       <button id="btn-1" class="btn-numbers">1</button>
       <button id="btn-3" class="btn-numbers">3</button>
       <button id="btn-5" class="btn-numbers">5</button>
@@ -29,17 +29,17 @@
 
     <div id="score">
       <div id="player">
-        <p>Player-Score</p>
+        <div class="player-text">Player-Score</div>
         <div id="playerPoints" class="score-box"></div>
       </div>
 
       <div id="tie">
-        <p>Tie</p>
+        <div class="player-text">Tie</div>
         <div id="tiePoints"></div>
       </div>
 
       <div id="computer">
-        <p>Computer-Score</p>
+        <div>Computer-Score</div>
         <div id="computerPoints" class="score-box"></div>
       </div>
     </div>
