added images to the rock, paper, scissors buttons

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </div>
 
     <div id="options">
-      <button id="btn-rock">Rock</button>
-      <button id="btn-paper">Paper</button>
-      <button id="btn-scissors">Scissors</button>
+      <button id="btn-rock"><img src="./resources/rock.svg" /></button>
+      <button id="btn-paper"><img src="./resources/paper.svg" /></button>
+      <button id="btn-scissors"><img src="./resources/scissors.svg" /></button>
     </div>
   </body>
 </html>
